--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Integradora</title>
+  <title>Sistemas Lógicos</title>
 </head>
 <body>
-  <h1>Activida Integradora: Campaña visual de promoción a la no violencia de género</h1>
-  <embed src="a.pdf" type="application/pdf" width="100%" height="600px">
+  <h1>Foro integrador del aprendizaje: Importancia de los sistemas lógicos</h1>
+  <embed src="sistemas_logicos.pdf" type="application/pdf" width="100%" height="600px">
   
 </body>
 </html>
+
