--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
   <h1>Foro integrador del aprendizaje: Importancia de los sistemas lógicos</h1>
-  <embed src="sistemas_logicos.pdf" type="application/pdf" width="100%" height="600px">
+  <embed src="Velazquez_Nava_Perla_Angelica.pdf" type="application/pdf" width="100%" height="600px">
   
 </body>
 </html>
+
 
